# bp-api-service-rust

./: Cargo.toml  Dockerfile  Dockerignore  README.md  docker-compose.yml  main.py
releases/: bp-api-service.0.0.1.md  bp-api-service.0.0.2.md
src/: main.rs
src/api/: forms.rs  mod.rs  shortcuts.rs  task.rs  urls.rs  views.rs  ws_clients.rs
src/clients/: bp_request_client.rs  mod.rs
src/clients/bp_request_client/: handlers.rs  mod.rs
src/db/: mod.rs
src/forms/: mod.rs
src/implementations/: auto_delete_files.rs  mod.rs  websocket.rs
src/routes/: mod.rs  shortcut.rs
src/utils/: mod.rs  path_utils.rs  save_utils.rs
