[package]
name = "bp-api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tej-protoc = { git = "https://github.com/tejmagar/tej-protoc-rust", rev = "a295b35" }
actix-web = "4.5.1"
actix-multipart = { version = "0.6.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
futures-util = "0.3.30"
dotenv = "0.15.0"
serde_json = { version = "1.0.115" , features = ["preserve_order"]}
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = "0.4.37"
actix-ws = "0.2.5"
actix-files = "0.6.5"
actix-cors = "0.7.0"
image = "0.25.1"
