[package]
name = "bp-api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tej-protoc = { git = "https://github.com/tejmagar/tej-protoc-rust", rev = "a295b35" }
racoon = { path = "/home/tejmagar/RustroverProjects/open-source/racoon" }
tokio = { version = "1.18.5", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
futures-util = "0.3.30"
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = "0.4.37"
image = "0.25.1"
serde = "1.0.199"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
